--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -229,6 +229,15 @@ header .about_block .right_group_block .cart svg:hover {
     background-image: url(../img/home_discover.png);
 }
 
+.parallax-invite {
+    background-image: url(../img/invite-hero.png);
+}
+
+.parallax-referal {
+    background-image: url(../img/bounty.jpg);
+    background-size: 100% auto !important;
+}
+
 .popular_products .about_block .products_item .item {
     max-width: none;
 }
@@ -1216,6 +1225,45 @@ footer .bottom_connecting_group .connecting a {
   fill: #ffdb0c !important;
 }
 
+
+.invite-launch__items .item .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 100%;
+}
+
+.invite-launch__items .item .text a {
+  margin-top: auto;
+}
+.hero.custom::before {
+  z-index: 100;
+}
+
+.invite-power__items .item .img img {
+  min-width: 80px;
+  min-height: 80px;
+}
+
+.purch__items-head .col {
+  flex: auto;
+}
+
+.purch__item .name .img {
+  border-radius: 7px;
+  overflow: hidden;
+}
+
+.purch__item .name .img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.purch__item .actions a {
+  display: inline-block;
+}
+
 @media (min-width: 1140px) {
 }
 
@@ -1671,15 +1719,16 @@ footer .bottom_connecting_group .connecting a {
     }
 }
 
-@media (max-width: 850px) {
-    /* .filter_products
-        .about_block
-        .filter_products_group
-        .right_products_filter
-        .filter_cards_group
-        .item {
-        max-width: 47%;
-    } */
+@media (max-width: 920px) {
+  .invite-power__items .item:last-child {
+    margin: 0 10px 20px;
+  }
+}
+
+@media (max-width: 800px) {
+    .parallax-referal {
+      background-size: auto 100% !important;
+    }
 }
 
 @media (max-width: 768px) {
@@ -1978,6 +2027,11 @@ footer .bottom_connecting_group .connecting a {
     }
     .cart-modal::-webkit-scrollbar-thumb:hover {
       background-color: #e65946;
+    }
+
+    .invite-power__items .item .img img {
+      min-width: 48px;
+      min-height: 48px;
     }
 }
 
