--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,4 +8,10 @@
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
+    --color-gray: #A4A0A0;
+    --color-active: #FC7361;
+    --color-secondary: #484134;
+    --color-light: #f9f9f9;
+    --color-red: #FF2C0C;
+    --color-yellow: #FFDB0C;
 }
