--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -187,8 +187,8 @@ header .about_block .right_group_block .rection_groups span {
   font-style: normal;
   font-weight: 400;
   line-height: 140%;
-  padding: 8px 20px;
-  border-radius: 4px;
+  /* padding: 8px 20px; */
+  /* border-radius: 4px; */
   border: 1px solid var(--main, #FC7361);
   background: var(--white, #FFF);
   transition: 0.5s all ease;
@@ -1807,7 +1807,7 @@ footer .bottom_connecting_group .connecting a {
 
 header .search_group {
   max-width: 400px;
-  margin: 0;
+  margin: 0 auto 0 0;
 }
 
 header .search_group .search-wrap {
@@ -2062,6 +2062,46 @@ header .search_group input[name="q"]::placeholder {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.the-profile__sidebar {
+  top: 80px;
+}
+
+.profile-wrap .accordion-item {
+  border: none;
+}
+
+.profile-wrap .accordion-button {
+  padding: 0;
+  background: inherit !important;
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.the-profile__sidebar {
+  max-width: none;
+  min-width: auto !important;
+}
+
+.accordion-button::after {
+  font-size: 14px;
+  background-image: url(../img/accardion_arrow2.svg) !important;
+  rotate: 180deg;
+}
+
+.card_monthly {
+  display: -ms-grid !important;
+  display: grid !important;
+  -ms-grid-columns: (1fr)[3];
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 5px;
+}
+
+.the-profile__sidebar svg path, .the-profile__sidebar svg g {
+  stroke-width: 0px !important;
 }
 
 @media (min-width: 1140px) {
@@ -2534,6 +2574,38 @@ header .search_group input[name="q"]::placeholder {
 
     .product_page_home .about_block {
       gap: 15px;
+    }
+
+
+    .the-profile__sidebar {
+      min-width: auto;
+      position: static;
+      width: 100%;
+    }
+
+    .the-content-wrap .container {
+      flex-direction: column;
+    }
+
+    .creatorPage .container .creatorPage-wrapper .creatorPage__breadcrumbs {
+      display: none;
+    }
+
+    .creatorPage .container {
+      padding: 0;
+    }
+
+    .the-profile__sidebar {
+      width: 100%;
+      max-width: none;
+      display: flex;
+      gap: 10px;
+    }
+
+    .profile-menu-list {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
     }
 }
 
