--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,7 @@
     --color-gray: #A4A0A0;
     --color-active: #FC7361;
     --color-second: #484134;
+    --color-dark: #212121;
     --color-light: #f9f9f9;
     --color-red: #FF2C0C;
     --color-yellow: #FFDB0C;
