--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -3051,6 +3051,11 @@ header .search_group input[name="q"]::placeholder {
       flex-direction: column;
       align-items: flex-start !important;
     }
+
+    .popUp__cross {
+      top: 15px;
+      right: 15px;
+    }
 }
 
 @media (max-width: 576px) {
