--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -3171,6 +3171,24 @@ header .search_group input[name="q"]::placeholder {
       flex-direction: row;
       align-items: flex-start !important;
     }
+
+    .parallax-investments {
+      background-image: url(../img/bg_insvest_mobile.jpg);
+      background-size: auto 120% !important;
+      background-attachment: fixed;
+    }
+
+    .parallax-investments::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: -1;
+    }
+
 }
 
 @media (max-width: 460px) {
